Revert "package name changed to com.arka.file"
This reverts commit d7b484a5475f4d9013fb2b46e368d6dacca392a1.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,9 +84,9 @@ packagingOptions {
   exclude "**/META-INF/*.kotlin_module"
 }
     
-    namespace "com.arka.file"
+    namespace "com.arkafile"
     defaultConfig {
-        applicationId "com.arka.file"
+        applicationId "com.arkafile"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
