--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,10 +79,19 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
     
-packagingOptions {
-  exclude "**/libc++_shared.so"
-  exclude "**/META-INF/*.kotlin_module"
-}
+    packagingOptions {
+        exclude "**/libc++_shared.so"
+        exclude "**/META-INF/*.kotlin_module"
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core:1.13.1'
+            force 'androidx.appcompat:appcompat:1.7.0'
+            exclude group: 'com.android.support', module: 'support-compat'
+            exclude group: 'com.android.support', module: 'support-v4'
+        }
+    }
     
     namespace "com.arka.file"
     defaultConfig {
