--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,6 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
