--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-webview": "^13.13.5"
   },
