--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-cookies/cookies": "^6.2.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-push-notification": "^8.1.1",
