--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
+    "@types/react-native-push-notification": "^8.1.4",
     "eslint": "^8.19.0",
     "typescript": "5.0.4"
   },
