--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,12 @@ dependencies {
     
     // Kotlin Coroutines for background tasks
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+    
+    // AndroidX Core for notifications
+    implementation("androidx.core:core-ktx:1.12.0")
+    
+    // OkHttp for HTTP requests
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
