package name to com.arkafile

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,9 @@ android {
         }
     }
     
-    namespace "com.arka.file"
+    namespace "com.arkafile"
     defaultConfig {
-        applicationId "com.arka.file"
+        applicationId "com.arkafile"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
