--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-webview": "^13.13.5"
   },
+  "codegenConfig": {
+    "name": "NativeLocalStorageSpec",
+    "type": "modules",
+    "jsSrcsDir": "specs",
+    "android": {
+      "javaPackageName": "com.nativelocalstorage"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/runtime": "^7.25.0",
