--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@ernestbies/react-native-android-sms-listener": "^1.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-cookies/cookies": "^6.2.1",
     "react": "19.0.0",
